unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Allow_Templates_With_Error_to_Generate__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Allow_Templates_With_Error_to_Generate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Templates With Error to Generate</label>
    <type>Checkbox</type>
</CustomField>