unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Disable_SDJob_Get_Content_For_Data__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Disable_SDJob_Get_Content_For_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable SDJob Get Content For Data</label>
    <type>Checkbox</type>
</CustomField>