unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Dont_Run_SDTemplate_Trigger__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Dont_Run_SDTemplate_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&#39;t Run SDTemplate Trigger</label>
    <type>Checkbox</type>
</CustomField>