unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Enable_Create_Salesforce_Task_Feature__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Enable_Create_Salesforce_Task_Feature__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Create Salesforce Task Feature</label>
    <type>Checkbox</type>
</CustomField>