unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Platform_Encryption_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Platform_Encryption_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check only if platform encryption is enabled in org.</description>
    <inlineHelpText>Check only if platform encryption is enabled in org.</inlineHelpText>
    <label>Platform Encryption Enabled</label>
    <type>Checkbox</type>
</CustomField>