unpackaged/main/default/objects/SDOC__SDocsSettings__c/fields/SDOC__Send_SDJobs_Email_as_Future__c.field-meta.xml
<CustomField>
    <fullName>SDOC__Send_SDJobs_Email_as_Future__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Checking this button will make emails sent out through S-Docs Jobs be sent through a future method. This allows the generated documents to be attached to the email record.</inlineHelpText>
    <label>Send SDJobs Email as Future</label>
    <type>Checkbox</type>
</CustomField>